--- a/data/map/provinces.toml
+++ b/data/map/provinces.toml
@@ -1,6 +1,15 @@
 provinces = [
-    {id = 1, x = 0, y = 0, terrain = "Hills", vp = 25, adjacent = [2, 3]},
-    {id = 2, x = 20, y = 40, terrain = "Jungle", vp = 5, adjacent = [1, 4]},
-    {id = 3, x = 40, y = 20, terrain = "Desert", vp = 0, adjacent = [1, 4]},
-    {id = 4, x = 60, y = 60, terrain = "Forest", vp = 10, adjacent = [2, 3]}
+    { id = 1, x = 10, y = 10, terrain = "Hills", vp = 25, adjacent = [2] },
+    { id = 2, x = 20, y = -10, terrain = "Jungle", vp = 5, adjacent = [1] }#,
+#    { id = 3, x = 40, y = 20, terrain = "Desert", vp = 0, adjacent = [1, 4] },
+#    { id = 4, x = 60, y = 60, terrain = "Forest", vp = 10, adjacent = [2, 3] }
+]
+points = [
+    [0, 0], [20, 0], [0,20], [20,20], [40, 0], [0, -20], [40, -20]
+]
+lines = [
+    [0, 1], [0, 2], [1, 3], [2, 3], [0, 4], [0, 5], [4, 6], [4, 6]
+]
+province_outlines = [
+    [0, 1, 3, 2], [0, 4, 6, 5]
 ]
